mool/tests/compile/fail/datetime_time_naive_portable.rs
use mool as db;

fn main() {
    let naive = db::val(time::PrimitiveDateTime::MIN);
    let _ = db::funcs::datetime::trunc_day(naive);
}
